# Mullvad-Gui-Slint

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  UPSTREAM.md  build.rs  clippy.toml  flake.nix
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  daemon-compatibility.yml  release.yml
assets/images/menubar-icons/: README.md
docker/: ci.Dockerfile  daemon-test.Dockerfile
docs/: desktop-compatibility.md  parity.md
packaging/: .SRCINFO  PKGBUILD  io.github.Greenstorm5417.MullvadGTK.metainfo.xml  io.github.Greenstorm5417.MullvadGuiSlint.metainfo.xml  mullvad-gtk.desktop  mullvad-gui-slint.desktop
packaging/rpm/: mullvad-gtk.spec  mullvad-gui-slint.spec
scripts/: package-appimage.sh  package-aur.sh  package-linux.sh  stage-linux.sh
scripts/ci/: test-latest-daemon.sh
src/: controller.rs  daemon.rs  desktop.rs  lib.rs  main.rs  map.rs  map_render.rs  model.rs  slint_main.rs  style.css
tests/: controller_integration.rs
tools/: generate-map-assets.mjs
ui/: account.slint  location.slint  map.slint  mullvad.slint  scrollbar.slint  settings.slint
