[package]
name = "mullvad-gtk"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.96.1"
license = "GPL-3.0-or-later"
authors = ["Greenstorm5417"]
description = "A native GTK4 frontend for the Mullvad VPN daemon on Linux"
homepage = "https://github.com/Greenstorm5417/Mullvad-GTK"
repository = "https://github.com/Greenstorm5417/Mullvad-GTK"
readme = "README.md"
keywords = ["mullvad", "vpn", "gtk4", "linux", "privacy"]
categories = ["gui", "network-programming"]
publish = false
default-run = "mullvad-gtk"

[package.metadata.mullvad-gtk]
application-id = "io.github.Greenstorm5417.MullvadGTK"
daemon-socket = "/var/run/mullvad-vpn"
issue-tracker = "https://github.com/Greenstorm5417/Mullvad-GTK/issues"
upstream = "https://github.com/mullvad/mullvadvpn-app"

[lints.rust]
non_ascii_idents = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"
unused_lifetimes = "warn"

[lints.clippy]
allow_attributes = "warn"
as_ptr_cast_mut = "warn"
as_underscore = "warn"
borrow_as_ptr = "warn"
undocumented_unsafe_blocks = "warn"
unicode_not_nfc = "warn"
unused_async = "deny"
wildcard_dependencies = "deny"

[features]
default = ["ui"]
ui = ["dep:gtk", "dep:ksni", "dep:notify-rust", "dep:serde_json"]

[dependencies]
async-channel = "2.5"
async-trait = "0.1"
gtk = { package = "gtk4", version = "0.11", optional = true }
hyper-util = { version = "0.1", features = ["tokio"] }
ksni = { version = "0.3.5", optional = true }
notify-rust = { version = "4.18.0", optional = true }
prost = "0.14"
prost-types = "0.14"
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.44", features = ["net", "rt-multi-thread", "time"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.2"
tonic-prost-build = { version = "0.14", features = ["transport"] }

[[bin]]
name = "mullvad-gtk"
path = "src/main.rs"
required-features = ["ui"]
