[package]
name = "mullvad-gui-slint"
version = "0.1.0-beta.1"
edition = "2024"
rust-version = "1.96.1"
license = "GPL-3.0-or-later"
authors = ["Greenstorm5417"]
description = "A native Slint frontend for the Mullvad VPN daemon on Linux"
homepage = "https://github.com/Greenstorm5417/Mullvad-Gui-Slint"
repository = "https://github.com/Greenstorm5417/Mullvad-Gui-Slint"
readme = "README.md"
keywords = ["mullvad", "vpn", "slint", "linux", "privacy"]
categories = ["gui", "network-programming"]
publish = false
default-run = "mullvad-gui-slint"

[package.metadata.mullvad-gui-slint]
application-id = "io.github.Greenstorm5417.MullvadGuiSlint"
daemon-socket = "/var/run/mullvad-vpn"
issue-tracker = "https://github.com/Greenstorm5417/Mullvad-Gui-Slint/issues"
upstream = "https://github.com/mullvad/mullvadvpn-app"

[lints.rust]
non_ascii_idents = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "warn"
unused_lifetimes = "warn"

[lints.clippy]
allow_attributes = "warn"
as_ptr_cast_mut = "warn"
as_underscore = "warn"
borrow_as_ptr = "warn"
undocumented_unsafe_blocks = "warn"
unicode_not_nfc = "warn"
unused_async = "deny"
wildcard_dependencies = "deny"

[features]
default = ["ui"]
ui = ["dep:arboard", "dep:ksni", "dep:notify-rust", "dep:semver", "dep:serde_json", "dep:shlex", "dep:slint", "dep:ureq", "dep:webbrowser"]

[dependencies]
async-channel = "2.5"
async-trait = "0.1"
arboard = { version = "3.6", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
slint = { version = "1.10", optional = true, default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
ksni = { version = "0.3.5", optional = true }
notify-rust = { version = "4.18.0", optional = true }
prost = "0.14"
prost-types = "0.14"
semver = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
shlex = { version = "2.0", optional = true }
tokio = { version = "1.44", features = ["net", "rt-multi-thread", "time"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tower = { version = "0.5", features = ["util"] }
ureq = { version = "3.1", optional = true }
webbrowser = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.2"
slint-build = "1.10"
tonic-prost-build = { version = "0.14", features = ["transport"] }

[[bin]]
name = "mullvad-gui-slint"
path = "src/slint_main.rs"
required-features = ["ui"]
